<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travel Organizer</string>
    <string name="app_name_caps_space_1">V A C A T I O N</string>
    <string name="app_name_caps_space_2">S C H E D U L E R</string>
    <string name="go_to_vacation_activity">Schedule A Vacation</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="vacation">New vacation?</string>
    <string name="excursion">New excursion?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="save_excursion">Save Excursion</string>
    <string name="excursion_deleted">Excursion deleted.</string>
    <string name="excursion_added">Excursion added.</string>
    <string name="excursion_updated">Excursion updated.</string>
    <string name="edit_excursion">Edit Excursion</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="no_excursions">No excursions exist for this vacation.</string>
    <string name="vacation_exists">The vacation "%1$s" already exists.</string>
    <string name="excursion_number">%1$s (%2$d of %3$d)</string>
    <string name="import_excursions">Import</string>
    <string name="select_vacation">Select a vacation:</string>
    <string name="undo">Undo</string>
    <string name="message">Message</string>
    <string name="vacation_title">Vacation Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="vacation_description">Vacation Description</string>
    <string name="vacation_hotel">Vacation Hotel</string>
    <string name="vacation_start_date">Vacation Start Date</string>
    <string name="vacation_end_date">Vacation End Date</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_description">Excursion Description</string>
    <string name="excursion_start_date">Excursion Start Date</string>
    <string name="excursion_end_date">Excursion End Date</string>
    <string name="invalid_end_date">The end date must be after the start date.</string>
    <string name="excursion_out_of_date_range">The excursion must be scheduled within the duration of the vacation</string>
    <string name="app_logo_description">umbrella</string>
    <string name="enable_alerts">ENABLE ALERTS</string>
    <string name="channel_name">Test Channel 1</string>
    <string name="channel_description">This is the notification channel for the Travel Organizer Application</string>
    <string name="invalid_date">The start or end dates are null</string>
    <string name="search_hint">Search</string>
    <string name="search">Search...</string>
</resources>